<resources>
    <string name="app_name">TestBundle2</string>
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="selected_item">Selected item:</string>
    <string name="your_profile">Your Profile</string>
    <string name="your_email">Your Email</string>
    <string name="your_password">Your Password</string>
    <string name="name">Name</string>
    <string name="surname">SurName</string>
    <string name="telephone">Telephone</string>
    <string-array name="speciality">
        <item>Administrator</item>
        <item>Client</item>
        <item>Analyst</item>

    </string-array>
    <string name="main">Main</string>
    <string name="basket">Basket</string>
    <string name="favorite">Favorite</string>
    <string name="history">History</string>
    <string name="profile">Profile</string>
    <string name="users">Users</string>
    <string name="product">Product</string>
    <string name="place_an_order">place an order</string>
    <string name="total_price">  total price :</string>
    <string-array name="category">
        <item>Winter</item>
        <item>Summer</item>

    </string-array>
    <string-array name="brand">
        <item>Nike</item>
        <item>Adidas</item>
        <item>Puma</item>

    </string-array>
    <string name="create_brand">Create Brand</string>
    <string name="name_brand">Name brand</string>
    <string name="write_to_name_brand">Write to Name brand</string>
    <string name="create">Create</string>
    <string name="create_category">Create Category</string>
    <string name="name_category">Name category</string>
    <string name="write_to_name_category">Write to Name category</string>
    <string name="create_product">Create Product</string>
    <string name="name_product">Name product</string>
    <string name="write_to_name_product">Write to Name product</string>
    <string name="description">Description</string>
    <string name="write_to_description">Write to Description</string>
    <string name="cost">Cost</string>
    <string name="amount">Amount</string>
    <string name="write_cost_product">Write Cost product</string>
    <string name="write_amount_product">Write Amount product</string>
    <string name="create_account">Create Account</string>
    <string name="write_to_email">Write to Email</string>
    <string name="write_to_password">Write to Password</string>
    <string name="write_your_name">Write your Name</string>
    <string name="write_your_surname">Write your SurName</string>
    <string name="write_your_telephone">Write your Telephone</string>
    <string name="valuta">$</string>
    <string name="add_to_basket">Add to Basket</string>
    <string name="update">Update</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="write_to_name">Write to Name</string>
    <string name="search">Search</string>
    <string name="sign_to_your_account">Sign to your account</string>
    <string name="welcome_back">Welcome Back</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_up">Sign Up</string>
    <string name="dont_s_have_an_account">Dont\'s have an account?</string>
    <string name="or_with">Or with</string>
    <string name="sign_in_with_google">Sign in with Google</string>
    <string name="sign_in_with_apple">Sign in with Apple</string>
    <string name="registration">Registration</string>
    <string name="update_brand">Update Brand</string>
    <string name="update_category">Update Category</string>
    <string name="update_product">Update Product</string>
    <string name="delete">Delete</string>
    <string name="product_info_format">%1$s %2$d\n%3$s %4$s\n%5$s %6$s\n%7$s %8$.2f</string>
    <string name="product_id">ID:</string>
    <string name="product_name">Name:</string>
    <string name="product_description">Description:</string>
    <string name="product_cost">Cost:</string>
    <string name="account_id">ID:</string>
    <string name="account_email">Email:</string>
    <string name="account_password">Password:</string>
    <string name="account_speciality">Speciality:</string>
    <string name="account_info_format">%1$s %2$d\n%3$s %4$s\n%5$s %6$s\n%7$s %8$s</string>
    <string name="brand_id">ID:</string>
    <string name="brand_name">Name:</string>
    <string name="brand_info_format">%1$s %2$s</string>
    <string name="category_id">ID:</string>
    <string name="category_name">Name:</string>
    <string name="category_info_format">%1$s %2$s</string>
    <string name="order_id">Order #%1$s</string>
    <string name="order_date">Date: %1$s</string>
    <string name="order_total_price">Total: %1$s%2$.2f</string>
    <string name="dobro_pojalovat">Welcome</string>
    <string name="input_type_formar_text">"Please enter the format name: Text"</string>
    <string name="Please_fill_in_all_fields">"Please fill in all fields"</string>
    <string name="input_type_double">Please enter the price in floating point format</string>
    <string name="input_type_description_product_text">Please enter the product description in Text format</string>
    <string name="input_name">Please enter the Name</string>
    <string name="input_description">Please enter the Description</string>
    <string name="input_cost">Please enter the Price</string>
    <string name="please_input_correct_mail">Please enter a valid email</string>
    <string name="this_email_is_used">This email is already in use</string>
    <string name="password_must_be_8_to_10_character">Password must be 8 to 10 characters long</string>
    <string name="telephone_must_be_6_to_15_character">Phone number must be 6 to 15 characters long</string>
    <string name="please_only_numbers">Please enter numbers only</string>
    <string name="please_start_with">Please start with \'+\'</string>
    <string name="account_success_create">Account successfully created</string>
    <string name="string">"Please enter the name in String format"</string>
    <string name="there_are_no_products_in_the_cart">There are no products in the cart</string>
    <string name="user_id_is_not_available">User ID is not available</string>
    <string name="pls_input_length_text_16_simvols">Please enter a 16-character text number card</string>
    <string name="pls_input_only_numbers">Please enter numbers only</string>
    <string name="pls_input_length_text_3_simvols">"Please enter a 3-character text CVC code"</string>
    <string name="pls_input_length_text_5_simvols_with">Please enter a 5-character text with \'/\'</string>
    <string name="pls_input_only_numbers_and_simvol">"Please enter only numbers and the \'/\' symbol"</string>
    <string name="failed_to_create_order">Failed to create order</string>
    <string name="the_order_was_successfully_completed">The order was successfully completed</string>
    <string name="product_in_basket">Product added to cart</string>
    <string name="all">All</string>
    <string name="No_brand_data_found">No brand data found</string>
    <string name="order_history_is_cleaner">Order history is empty</string>
    <string name="this_email_is_used_by_another_account">This email is already used by another account</string>
    <string name="email_and_password_cannot_be_empty">Email and password cannot be empty</string>
    <string name="no_users_found_initializing_data">No users found, initializing data...</string>
    <string name="try_again">Try again</string>
    <string name="incorrect_email_or_password">Incorrect email or password</string>
    <string name="please_insert_correct_name">Please enter a valid name</string>
    <string name="please_insert_correct_surname">Please enter a valid surname</string>
    <string name="password_cannot_be_empty">Password cannot be empty</string>
    <string name="password_must_be_8_to_15_characters_long">Password must be 8 to 15 characters long</string>
    <string name="password_must_contain_at_least">Password must contain at least:\n</string>
    <string name="_1_uppercase_letter_a_z">- 1 uppercase letter (A-Z)\n</string>
    <string name="_1_lowercase_letter_a_z">- 1 lowercase letter (a-z)\n</string>
    <string name="_1_digit_0_9">- 1 digit (0-9)\n</string>
    <string name="_1_special_character_etc"><![CDATA[- 1 special character (!@#$%^&* etc.)]]></string>
    <string name="successfully_product_add_in_basket">Product successfully added to cart</string>
    <string name="success_add_to_basket">Product successfully added to cart</string>
    <string name="product_already_in_basket">This product is already in the cart</string>
    <string name="sql_error">SQL error</string>
    <string name="selected_size">Selected Size :</string>
    <string name="insertnumbercard">Insert number card</string>
    <string name="confirmpaymant">Confirm Payment</string>
    <string name="mm_yy">MM/YY</string>
    <string name="error_card_number">Invalid card number (16 digits required)</string>
    <string name="error_cvc">Invalid CVC (3 digits required)</string>
    <string name="error_expiry_date">Invalid expiration date (format MM/YY)</string>
    <string name="please_correct_errors">Please check:\n- Card number\n- CVC code\n- Expiration date</string>
    <string name="newpassword">New Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="write_new_password">Write new password</string>
    <string name="old_password">Old Password</string>
    <string name="write_old_password">Write old Password</string>
    <string name="new_password">New Password</string>
    <string name="Administarator">Administrator</string>
    <string name="password_success_edit">Password changed successfully</string>
    <string name="new_password_dont_success_tz">New password doesnt meet requirements</string>
    <string name="check_new_password">Please verify the new password</string>
    <string name="password_dont_with_old_password">Password doesnt match the old one</string>
    <string name="account_updated_successfully">account_updated_successfully\n</string>
    <string name="please_select_razmer">Please select size</string>
    <string name="please_select_an_image">Please select an image</string>
    <string name="product_updated">Product updated</string>
    <string name="error">Error: %1$s</string>
    <string name="product_created_successfully">Product created successfully</string>
    <string name="product_not_found">Product not found</string>
    <string name="invalid_product_id">Invalid product ID</string>
    <string name="nullable">null</string>
    <string name="products_successfully_clearing">Products successfully clearing</string>
    <string name="client">Client</string>
    <string name="brand_this_used">This brand is used</string>
    <string name="category_this_used">This category is used</string>
    <string name="size">size:</string>
    <string name="order">your order:</string>
    <string name="registerAccount">Register Account</string>
    <string name="SuccesregisterAccount">Account success registered</string>
    <string name="insertYourEmail">Insert your email</string>
    <string name="insertCode">Insert code</string>
    <string name="confirmEmail">Confirm email</string>
    <string name="CVC">CVC</string>
    <string name="succesCheckEmail">You have successfully verified your email</string>
    <string name="unsuccessfullyCheckEmail">You have unsuccessfully verified your email</string>
    <string name="category_and_brand_managment">Category And Brand Management</string>
    <string name="users_managment">Users management</string>
    <string name="product_management">Product management</string>
    <string name="order_history">Order History</string>
</resources>