<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp">

    <!-- Кнопка назад и заголовок -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:layout_marginBottom="24dp">

        <ImageButton
            android:id="@+id/btnArrowBack"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:src="@drawable/arrow_ic"
            android:background="?attr/selectableItemBackgroundBorderless"
             />

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/create_brand"
            android:textSize="24sp"
            android:textStyle="bold"
            android:layout_marginStart="16dp" />
    </LinearLayout>

    <!-- Надпись для поля ввода -->
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/name_brand"
        android:textSize="16sp"
        android:layout_marginBottom="8dp" />

    <!-- Поле ввода названия бренда -->
    <EditText
        android:id="@+id/etNameBrand"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/write_to_name_brand"
        android:inputType="textCapWords"
        android:maxLines="1"

        android:padding="16dp"
        android:layout_marginBottom="32dp"
        android:digits="abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZабвгдеёжзийклмнопрстуфхцчшщъыьэюяАБВГДЕЁЖЗИЙКЛМНОПРСТУФХЦЧШЩЪЫЬЭЮЯ 1234567890" />

    <!-- Кнопка создания -->
    <Button
        android:id="@+id/btnCreate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/create"
        android:backgroundTint="@color/green"
        android:textColor="@android:color/white"
        android:textSize="16sp"
        android:paddingVertical="12dp" />

</LinearLayout>