<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <ImageButton
        android:id="@+id/btnArrowBack"
        android:layout_width="42dp"
        android:layout_height="34dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="12dp"
        android:background="@android:color/transparent"
        android:src="@drawable/arrow_ic"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="229dp"
        android:layout_height="44dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="60dp"
        android:fontFamily="sans-serif-black"
        android:text="@string/update_category"
        android:textSize="30sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="28dp"
        android:layout_marginTop="116dp"
        android:fontFamily="sans-serif-black"
        android:text="@string/name_category"
        android:textSize="15dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/etNameCategory"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="144dp"
        android:ems="10"
        android:maxLines="1"
        android:hint="@string/write_to_name_category"
        android:inputType="text"
        android:isScrollContainer="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <Button
        android:id="@+id/btnUpdate"
        android:layout_width="320dp"
        android:layout_height="43dp"
        android:layout_marginStart="52dp"
        android:layout_marginTop="191dp"
        android:backgroundTint="@color/blue"
        android:text="@string/update"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.967" />

</androidx.constraintlayout.widget.ConstraintLayout>